--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>portfolio web page</title>
 </head>
 <body>
     <header>
@@ -16,10 +16,30 @@
         </nav>
     </header>
     <main>
-        <section id="about"></section>
-        <section id="work"></section>
-        <section id="resume"></section>
-        <section id="contact"></section>
+        <section id="about">
+            <p>ABOUT</p>
+            <video width="320" height="240" controls>
+                <source src="path/to/video.mp4" type="video/mp4">
+            </video>
+        </section>
+        <section id="work">
+            <p>WORK</p>
+        </section>
+        <section id="resume">
+            <p>RESUME</p>
+        </section>
+        <section id="contact">
+            <p>CONTACT:</p>
+            <form method="post">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required><br><br>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required><br><br>
+                <label for="message">Message:</label><br>
+                <textarea id="message" name="message" rows="4" cols="50" required></textarea><br><br>
+                <input type="submit" value="Submit">
+            </form>
+        </section>
     </main>
     <footer>
         <p>© 2024 Opeyemi. All rights reserved.</p>
