--- a/project.html
+++ b/project.html
@@ -29,7 +29,7 @@
             <p>RESUME</p>
         </section>
         <section id="contact">
-            <p>CONTACT:</p>
+            <p>CONTACT</p>
             <form method="post">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required><br><br>
