--- a/project.html
+++ b/project.html
@@ -17,19 +17,19 @@
     </header>
     <main>
         <section id="about">
-            <p>ABOUT</p>
+            <h2>ABOUT</h2>
             <video width="320" height="240" controls>
                 <source src="path/to/video.mp4" type="video/mp4">
             </video>
         </section>
         <section id="work">
-            <p>WORK</p>
+            <h2>WORK</h2>
         </section>
         <section id="resume">
-            <p>RESUME</p>
+            <h2>RESUME</h2>
         </section>
         <section id="contact">
-            <p>CONTACT</p>
+            <h2>CONTACT</h2>
             <form method="post">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required><br><br>
